[project]
name = "floresta-functional-tests"
version = "0.0.3"
description = "Collection of tools to help with the functional tests of Floresta"
authors = [{ name = "The Floresta Project Developers" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "jsonrpclib>=0.2.1",
  "requests>=2.32.3",
  "black>=24.10.0",
  "pylint>=3.3.2",
  "cryptography>=44.0.2",
  "pyOpenSSL>=25.0.0",
  "pytest>=8.4.1"
]

[tool.hatch.build.targets.wheel]
packages = ["tests/test_framework"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["pytest"]
pythonpath = [".", "pytest"]
python_files = ["test_*.py", "*_test.py", "*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]